# coreauth

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  start.sh
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.migrator  docker-entrypoint.sh
backend/.sqlx/: query-1d46d0d30be4e47773ed85c7f48a63fcba434a056f4616845aa2fd3672d1e2f0.json  query-205a700688b51fc6d053f6a401acc2e90e3daaa03dc58ea6f6a89e1f4f93c4ba.json  query-2c29c69b61bdb8773ff45b95993fb45ef324fac2ffbd35d8f25117708c7c9e25.json  query-30631caafde02325ba0093eac3f8de20596cf57d64ec596863b328b89dcb4eda.json  query-381dc95243f9eb3747e519270972f17a8acf5e139a5cf4d82dfe5202ebf899e7.json  query-3e46a0dee1de3679301877874ad93606f2d31c3195dc66cedf9f0ed0a6594ebf.json  query-4e2b0b8106fca0e9b6d0d6ef5d70e9c400a5ed33c28313f87a6daf054a0a9707.json  query-50c15a2aca69016cfa514651e164d107bde1e0cc924fcfcb44e90cfb7a37f743.json  query-58145ee12c44fca675647ab6f2e2360fb60008bc65a819227c6843a195e2e22e.json  query-5c765ce87407893b3e6fdbeca8d712b338789c66ce69dbf370a51794bd1f32cd.json  query-785284ce5caa74437b0f833a3692027b2ed30aee723a568d67126e9fbadd8153.json  query-79663f43b8607d404671e51082ff6f6cfe9692910dece6caa46b5eacf288079e.json  query-8e7e8d00e4f3523e42abc92877282fe8b2a811f871c77b6fbffbd0c2c49b3ace.json  query-a67563b35d6eb54b7774045eb0098057630061c36cf7798d48a66666d257c60d.json  query-aa5e9bd75c908a03313aef5621096b19b2c1ece4e0af3a8ab77572d1415728a3.json  query-ade2ebafda3993d66b13c2d288b09689f7a27082fc8557341349e9720e917891.json  query-af0734e72b362503287a05122cce726f0a9b47f56f14d7be42874016ba78ad2b.json  query-b54240053826a02f081f559489e31852e3a978c9c7e9c9398a19ce13940f158a.json  query-b5ad3cde6ecb0f87439028766910e66daf96daef37e787c9928b0cc9509d7338.json  query-b719808b2b94a781e673457997b80f2ab92eeff22ac7b721d2c35f049d2ad09b.json  query-cb3cacb478d28b82085f1ee12b19ddf9819e5746bd6c1764d00481adda478811.json  query-e591bebcb92c0de30fc2ca5cf1018114e31fddfd952b222a0dd5201302b133da.json  query-ef903f8b5031ffa41485664f9fda7c4a2972059efe549059fe4698f86afb45ed.json  query-efd12129fd0b3c87edb8d6adac40926149ed49a1cedc7aa53835b5f1e8b4c10c.json  query-f34d58b2a8ee0f2c5de0929c4cd9c8f6f0ee3439d53b676f5c598a544119fb94.json  query-f9a8797b1d03681bb4a1211adf9e21e789aab896d4eb2f8ded1b357a7cd47a8e.json  query-faa0d1c0b880b97d7e517a69c89922ed1b49b064eb2d7db21a29b8ab6d99509f.json  query-fbcbd3f0e1b8662e5d171937300810956bbb0b197c3a7b41038cf5eb73bd4caf.json  query-fe95701371e155b4b7f33cfa44e428e81dcbd81a5a5c083f415e75b4af7b82f8.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: handlers.rs  main.rs  routes.rs
backend/crates/api/templates/: base.html  consent.html  error.html  logged_out.html  login.html  mfa.html  signup.html
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: account_lockout.rs  application_service.rs  audit_service.rs  connection_service.rs  error.rs  invitation.rs  jwt.rs  lib.rs  oauth2_service.rs  password.rs  password_reset.rs  service.rs  verification.rs
backend/crates/authz/src/: application.rs  engine.rs  lib.rs
backend/crates/cache/src/: lib.rs  redis_cache.rs
backend/crates/database/: Cargo.toml
backend/crates/database/src/: error.rs  lib.rs
backend/crates/models/src/: application.rs  billing.rs  connection.rs  lib.rs  oauth2.rs  oidc_provider.rs  organization.rs  permission.rs  role.rs  scim.rs  user.rs
backend/crates/tenant/src/: context.rs  lib.rs
backend/migrations/: 001_init.sql  003_sub_organizations.sql  004_application_scoping.sql  005_actions_hooks.sql  006_billing.sql
backend/migrations/old/: 20260201000005_create_audit_logs.sql.disabled
backend/migrations_old/: 20260201000000_init.sql  20260201000001_oidc_providers.sql  20260201000003_account_security.sql  20260201000004_create_authz_tables.sql  20260201000006_hierarchical_tenant_model.sql
backend/tests/integration/: README.md  run_all_tests.sh  test_error_cases.sh  test_hierarchical_login.sh
coreauth-core/crates/authz/: Cargo.toml
coreauth-core/crates/authz/src/: engine.rs  error.rs  lib.rs  store.rs  tuple.rs
coreauth-core/crates/cache/: Cargo.toml
coreauth-core/crates/cache/src/: error.rs
coreauth-core/crates/database/: Cargo.toml
coreauth-core/crates/database/.sqlx/: query-07b419660350376923c4fe7eb244b53ddcedb2204aaeaaa017b0c1f308c1a14f.json  query-09e7693ca97797ad4b4ca3eca36dcc1824b68fce5b1a074413af6db4525976f2.json  query-0b64e3ad60966fac489d6c0830a550338a67b4e22d7a2b5f998fd22e1b7f4450.json  query-322e08b3d1a989ee10a98668423617b7a370725858ddc3fbcfcdf9ebc83993af.json  query-48de00ffdcff0600bc8c0c320771e61b02266b8e5a59a36d5c3b11e0d8424d70.json  query-62839174f65cbdc28594d605b3bb3f05b350af57193a804b9e4fb87a57dfeeeb.json  query-833e362938ad8230f309c2e4147e26bb1dbd20d819007c7a0c3865d2e8319f35.json  query-8664c767ea5f96c6034ee9b66345511a9fde6a1623fb353ab42f8a676d742703.json  query-89c9b089dcf226bcff41db9d90bb2568a0ad79bf730ff086119e984000bc0bdc.json  query-b56966361994858e8f32f050f78367f561bdb9edd04dcecf2a71a9ae8b67e543.json  query-dc07776d7ac12063d6949039ac467eb06d631e068b33528a7a5871a901affcaf.json  query-e46d73865ba1a64aa34757d24002ce1ae498ad576d41f84f1dca29d2a154484e.json  query-f0e8dc097a9f0402cfa6e3a3f5b77d8442e2de723ff8f0a164f07777ffc2a217.json  query-f24ede7d995c16fae283d896f7bdb05c8dc35af5c40f760826c41a13f33401cf.json
coreauth-core/crates/database/src/: connection.rs  error.rs  lib.rs  tenant_router.rs
coreauth-core/crates/models/: Cargo.toml
coreauth-core/crates/models/src/: action.rs  application.rs  audit.rs  connection.rs  group.rs  lib.rs  mfa.rs  oauth.rs  oauth2.rs  oidc_provider.rs  organization.rs  organization_member.rs  passwordless.rs  self_service.rs  session.rs  tenant.rs  user.rs  webhook.rs
coreauth-core/crates/tenant/: Cargo.toml
coreauth-proxy/: Cargo.toml  Dockerfile  proxy.yaml
coreauth-proxy/src/: auth.rs  config.rs  fga.rs  jwt.rs  main.rs  middleware.rs  reverse_proxy.rs  route_matcher.rs  session.rs
docs/: ARCHITECTURE.md  (+12 more)
sdk/python/: pyproject.toml
sdk/python/coreauth/: __init__.py  _http.py  client.py  exceptions.py
(+375 files in other folders)
