[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreauth"
version = "0.1.0"
description = "Official Python SDK for CoreAuth — multi-tenant CIAM platform"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
]
