[package]
name = "ciam-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
ciam-auth = { path = "../auth" }
ciam-authz = { path = "../authz" }
ciam-database = { path = "../database" }
ciam-models = { path = "../models" }
ciam-tenant = { path = "../tenant" }
ciam-cache = { path = "../cache" }

# Async runtime
tokio.workspace = true

# Database
sqlx.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[[bin]]
name = "coreauth-api"
path = "src/main.rs"
