[package]
name = "ciam-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
ciam-auth = { path = "../auth" }
ciam-authz = { path = "../authz" }
ciam-database = { path = "../database" }
ciam-models = { path = "../models" }
ciam-tenant = { path = "../tenant" }
ciam-cache = { path = "../cache" }

# Async runtime
tokio.workspace = true

# Database
sqlx.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
base64 = "0.22"

# Templating for Universal Login
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
urlencoding = "2.1"

# HTTP client for social login and webhooks
reqwest = { version = "0.12", features = ["json"] }

# Cryptography for webhook signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[[bin]]
name = "coreauth-api"
path = "src/main.rs"
