[package]
name = "ciam-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
ciam-models = { path = "../models" }
ciam-database = { path = "../database" }
ciam-cache = { path = "../cache" }

# Async runtime
tokio.workspace = true

# Web framework (for extractors)
axum.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication & Crypto
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
totp-lite.workspace = true
base32.workspace = true
base64 = "0.22"
qrcode.workspace = true
image.workspace = true
urlencoding.workspace = true

# Validation
validator.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# JavaScript runtime
deno_core.workspace = true
serde_v8.workspace = true

# Logging
tracing.workspace = true

# Cryptography
sha2 = "0.10"
hex.workspace = true

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
