[package]
name = "ciam-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
ciam-models = { path = "../models" }

# Async runtime
tokio.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
config.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
rand.workspace = true
bcrypt.workspace = true

# Network types
ipnetwork.workspace = true

# Caching
moka.workspace = true

# Encoding
base64.workspace = true

# Encryption
aes-gcm.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
